fix title in html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>JavaScript Concatenation with Webpack</title>
+	<title>Embedded Stylesheets with Webpack</title>
 </head>
 <body>
 	<script type="text/javascript" src="./build/bundle.js"></script>
